src/test/ui/const-generics/generic_const_exprs/issue-69654.stderr
error[E0423]: expected value, found type parameter `T`
  --> $DIR/issue-69654.rs:5:25
   |
LL | impl<T> Bar<T> for [u8; T] {}
   |      -                  ^ not a value
   |      |
   |      found this type pararmeter

error[E0599]: the function or associated item `foo` exists for struct `Foo<_>`, but its trait bounds were not satisfied
  --> $DIR/issue-69654.rs:17:10
   |
LL | struct Foo<const N: usize> {}
   | -------------------------- function or associated item `foo` not found for this struct
...
LL |     Foo::foo();
   |          ^^^ function or associated item cannot be called on `Foo<_>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `[u8; _]: Bar<[(); _]>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0599.
For more information about an error, try `rustc --explain E0423`.
